Made new accordion to prevent href jumping the scroll

--- a/css/entry.css
+++ b/css/entry.css
@@ -7,9 +7,13 @@
 body {
     background-color: var(--main);
 }
-a, a:visited, a:hover, a:active{
+
+a,
+a:visited,
+a:hover,
+a:active {
     color: inherit;
-  }
+}
 
 :root {
     --primary: #09AAC3;
@@ -160,7 +164,8 @@ a, a:visited, a:hover, a:active{
     background-size: cover;
     background-position: center;
 }
-.hero-text{
+
+.hero-text {
     position: relative;
     top: 75%;
     background-color: var(--main);
@@ -170,24 +175,27 @@ a, a:visited, a:hover, a:active{
     width: 300px;
 
 }
-.hero h1{
+
+.hero h1 {
     text-align: center;
 }
 
 /* ------------Detail----------- */
 
-h2{
+h2 {
     color: var(--primary);
     text-align: center;
     margin: 20px 10px 10px 10px;
 }
-.entry-detail{
+
+.entry-detail {
     color: var(--primary);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
-.detail-card{
+
+.detail-card {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -199,22 +207,25 @@ h2{
     padding: 10px;
     margin: 10px;
 }
-.entry-detail i{
+
+.entry-detail i {
     font-size: 3em;
     margin-bottom: 10px;
 }
 
 /* ----------Prize Pool--------- */
-.prize-container{
+.prize-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: 20px 0px;
 }
-.prize-pool{
+
+.prize-pool {
     margin: 10px;
 }
-.table-content{
+
+.table-content {
     background-color: var(--primary);
     margin: 10px 10px 5px 10px;
     border: 1px solid var(--secondary);
@@ -223,36 +234,43 @@ h2{
     padding: 10px;
     border-radius: 10px;
 }
-.prize-pool span{
+
+.prize-pool span {
     color: var(--primary);
     font-style: italic;
     font-size: 0.8em;
     position: relative;
     left: 15px;
 }
-.prize-pool h3{
+
+.prize-pool h3 {
     text-align: center;
     margin-bottom: 5px;
 }
-.prize-pool td.first{
+
+.prize-pool td.first {
     width: 150px;
 }
 
 /* ------------Entry Form------------ */
-.entry-form{
+.entry-form {
     margin: 10px;
 }
-.form{
+
+.form {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.entry-form h3{
+
+.entry-form h3 {
     color: var(--primary);
     font-size: 1.8em;
     margin: 15px;
+    text-align: center;
 }
-.form input{
+
+.form input {
     margin: 0px 10px 10px 10px;
     width: 300px;
     border: none;
@@ -262,6 +280,7 @@ h2{
     border: 1px solid var(--secondary);
     background-color: var(--main);
 }
+
 .form input:active {
     border: 2px solid var(--secondary);
 }
@@ -274,10 +293,73 @@ h2{
     padding: 5px 10px;
 }
 
+/* -----------Accordion---------- */
+.contain-accordion{
+    max-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.accordion {
+    background-color: var(--secondary);
+    position: relative;
+    color: var(--main);
+    cursor: pointer;
+    padding: 10px;
+    margin: 0px 10px;
+    width: 80vw;
+    max-width: 550px;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+    border-radius: .4rem;
+    border: 2px solid var(--main);
+}
+
+.panel {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    color: var(--secondary);
+    width: 80vw;
+    max-width: 550px;
+    text-align: justify;
+}
+
+.accordion::before,
+.accordion::after {
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 3px;
+    right: 15px;
+    top: 50%;
+    border-radius: 5px;
+    background-color: var(--main);
+    position: absolute;
+    transition: transform 0.5s;
+}
+
+.accordion::after {
+    transform: rotate(90deg);
+}
+
+.active::before {
+    transform: rotate(180deg);
+}
+
+.active::after {
+    transform: rotate(0deg);
+}
+
 
 /* --------------Help-FAQs------------ */
 
-
+/* .faq{
+    font-size: 1.8em;
+}
 .container-faq{
     width: 100%;
     max-width: 80rem;
@@ -292,7 +374,7 @@ h2{
     border-radius: .4rem;
     border: 2px solid var(--secondary);
     margin-bottom: 1rem;
-    padding: 1rem;
+    padding: 10px;
 }
 .accordion{
     max-width: 550px;
@@ -342,17 +424,12 @@ h2{
 
 .accordion-item:target .answer{
     max-height: 20rem;
-}
-.accordion-item:target .accordion-link .ion-md-add{
-    display: none;
-}
-.accordion-item:target .accordion-link .ion-md-remove{
-    display: block;
-}
+} */
+
 
 /* -----------Icon----------- */
 
-.drop-icon::before,
+/* .drop-icon::before,
 .drop-icon::after
 {
     content: '';
@@ -374,13 +451,13 @@ h2{
 }
 .accordion-item:target .drop-icon::after{
     transform: rotate(0deg);
-}
+} */
 
 
 
 
 /* -------------Footer------------ */
-.container-footer{
+.container-footer {
     display: flex;
     flex-wrap: wrap;
     margin-top: 20px;
@@ -389,33 +466,39 @@ h2{
     align-items: flex-start;
     background-color: var(--primary);
 }
-.foot-pages{
+
+.foot-pages {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px;
     margin: 0px 10px;
 }
-.foot-pages h3{
+
+.foot-pages h3 {
     align-self: flex-start;
 }
-.container-footer ul{
+
+.container-footer ul {
     list-style: none;
     margin-top: 10px;
     padding: 0;
 }
-.container-footer a{
+
+.container-footer a {
     text-decoration: none;
     font-size: 0.8em;
     color: #1301aa;
 }
-.footer-about p{
+
+.footer-about p {
     max-width: 200px;
     min-width: 115px;
     font-size: 0.8em;
     text-align: justify;
 }
-.container-footer i{
+
+.container-footer i {
     font-size: 1.4em;
     margin: 10px;
     background: -webkit-linear-gradient(#00058b, #8300c5);
@@ -423,10 +506,12 @@ h2{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.contain-links{
+
+.contain-links {
     text-align: center;
 }
-.footer-cjpixel-about .contain-logo{
+
+.footer-cjpixel-about .contain-logo {
     width: 110px;
     height: 110px;
     margin: 10px;
@@ -435,13 +520,16 @@ h2{
     border-radius: 5px;
     background-color: var(--main);
 }
-.footer-cjpixel-about img{
+
+.footer-cjpixel-about img {
     width: 100%;
 }
-.footer-about{
+
+.footer-about {
     padding: 10px;
 }
-.contain-cjpixel{
+
+.contain-cjpixel {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -450,25 +538,30 @@ h2{
 
 /* ------------Device Responsiveness------------- */
 
-@media only screen and (max-width: 550px){
-    .entry-detail i{
+@media only screen and (max-width: 550px) {
+    .entry-detail i {
         font-size: 2em;
     }
-    .detail-card{
+
+    .detail-card {
         padding: 10px;
         margin: 5px;
     }
-    .detail-card span{
+
+    .detail-card span {
         font-size: 0.8em;
     }
-    .hero{
+
+    .hero {
         height: 20vh;
     }
-    .entry-form{
+
+    .entry-form {
         width: 80vw;
     }
 }
-@media only screen and (max-width: 350px){
+
+@media only screen and (max-width: 350px) {
     .form input {
         width: auto;
     }
